--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=AnotherAngle
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+EditorStartupMap=/Game/Menu.Menu
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
@@ -11,7 +11,7 @@ ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap
+GameDefaultMap=/Game/Menu.Menu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
